fix spacing to look a bit better in IE

--- a/sass/px-key-value-pair.scss
+++ b/sass/px-key-value-pair.scss
@@ -37,7 +37,7 @@
 }
 
 .kvp-margin--alpha {
-  margin-top: calculateRem(-12px);
+  margin-top: calculateRem(-10px);
 }
 
 .kvp-margin--beta {
